fix checkbox align

--- a/login/scss/main.scss
+++ b/login/scss/main.scss
@@ -88,7 +88,16 @@ body {
   .option {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin: 20px 0;
+    .option-checkbox {
+      display: flex;
+      align-items: center;
+      input {
+        margin: 0;
+        margin-right: 10px;
+      }
+    }
   }
   span {
     position: absolute;
